--- a/style.css
+++ b/style.css
@@ -20,12 +20,16 @@ p {
   color: rgb(85, 85, 85);
 }
 
+
+
 /* TRANSITION */
 
 a,
 .btn {
   transition: all 300ms ease;
 }
+
+
 
 /* DESKTOP NAV */
 
@@ -66,6 +70,8 @@ a:hover {
 .logo:hover {
   cursor: default;
 }
+
+
 
 /* HAMBURGER MENU */
 
@@ -148,12 +154,14 @@ a:hover {
   transform: none;
 }
 
+
+
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
-  /* height: 96vh; */
-  margin: 0 10rem;
+  padding-top: 6vh; 
+  /* height: 96vh; */  /* some sections need more than 100vh */
+  margin: 1rem 6rem;
   box-sizing: border-box;
   min-height: fit-content;
 }
@@ -162,13 +170,14 @@ section {
   display: flex;
 }
 
+
+
 /* PROFILE SECTION */
 
 #profile {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  /* height: 50vh; */
 }
 
 .section__pic-container {
@@ -208,12 +217,16 @@ section {
   gap: 1rem;
 }
 
+
+
 /* ICONS */
 
 .icon {
   cursor: pointer;
   height: 2rem;
 }
+
+
 
 /* BUTTONS */
 
@@ -263,6 +276,8 @@ section {
   gap: 1rem;
 }
 
+
+
 /* ABOUT SECTION */
 
 #about {
@@ -311,18 +326,20 @@ section {
 }
 
 .section__pic-container {
-  height: 400px;
-  width: 400px;
+  height: 420px;
+  width: 420px;
   margin: auto 0;
 }
 
-/* EXPERIENCE SECTION */
 
-#publications {
+
+/* RESEARCH SECTION */
+
+#research {
   position: relative;
 }
 
-.experience-sub-title {
+.research-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
   font-size: 1.75rem;
@@ -344,30 +361,6 @@ section {
   justify-content: space-around;
 }
 
-article {
-  display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
-}
-
-article .icon {
-  cursor: default;
-}
-
-/* RESEARCH SECTION */
-
-#research {
-  position: relative;
-}
-
-.pubs-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    min-height: fit-content;
-  }
-
 .color-container {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
@@ -388,6 +381,23 @@ article .icon {
   color: black;
   border-color: rgb(163, 163, 163);
 }
+
+
+
+/* PUBLICATIONS SECTION */
+
+#publications {
+  position: relative;
+}
+
+.pubs-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: fit-content;
+  }
+
+
 
 /* CONTACT */
 
@@ -428,6 +438,8 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+
 
 /* FOOTER SECTION */
 
